--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,45 @@
+atomicwrites==1.1.5
+attrs==18.1.0
+beautifulsoup4==4.6.0
+bs4==0.0.1
 cachetools==2.1.0
+certifi==2018.4.16
+chardet==3.0.4
 click==6.7
+colorama==0.3.9
+Cython==0.28.4
+et-xmlfile==1.0.1
 Flask==1.0.2
 google-api-python-client==1.7.4
 google-auth==1.5.1
 google-auth-httplib2==0.0.3
+html5lib==1.0.1
 httplib2==0.11.3
+idna==2.7
 itsdangerous==0.24
+jdcal==1.4
 Jinja2==2.10
 MarkupSafe==1.0
+more-itertools==4.2.0
+numpy==1.14.5
 oauth2client==4.1.2
+openpyxl==2.5.4
+pandas==0.23.3
+pluggy==0.6.0
+pprint==0.1
+py==1.5.4
 pyasn1==0.4.4
 pyasn1-modules==0.2.2
 PyDrive==1.3.1
+pytest==3.6.3
+python-dateutil==2.7.3
+pytz==2018.5
 PyYAML==3.13
+requests==2.19.1
 rsa==3.4.2
 six==1.11.0
 uritemplate==3.0.0
+urllib3==1.23
+webencodings==0.5.1
 Werkzeug==0.14.1
+xlwt==1.3.0
